# agent-crop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/agent_banana/: __init__.py  cli.py  config.py  memory.py  models.py  nano_banana.py  pipeline.py  planning.py  quality.py  server.py  targeting.py  vision.py
tests/: test_agent_banana.py
